feat(tmux): Adjust escape time for tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -10,6 +10,10 @@ set -g terminal-overrides "$TERM:Tc"
 set -g status-keys emacs
 set -g mode-keys   vi
 
+# Prevents <esc> in neovim to be delayed
+# https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
+set -sg escape-time 10
+
 # prefix
 unbind C-b
 set -g prefix C-Space
