feat(tmux): Adjust tmux status line

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -62,6 +62,7 @@ bind-key C-l send-keys C-l
 # Dracula status bar theme
 set -g status-interval 15
 set -g clock-mode-style 24
+set -g status-left-length  30
 set -g status-right-length 100
 
 set -g @dracula-white '#f8f8f2'
@@ -85,7 +86,7 @@ set -g message-style 'bg=#{@dracula-gray},fg=#{@dracula-white}'
 set -g status-style  'bg=#{@dracula-gray},fg=#{@dracula-white}'
 
 set -g status-left '#[bg=#{@dracula-light_purple},fg=#{@dracula-gray}] #{session_name} #[fg=#{@dracula-light_purple},bg=#{@dracula-gray}]#{@powerline-left} '
-set -g status-right '#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}#{user} #[fg=#{@dracula-light_purple},bg=#{@dracula-gray}]#{@powerline-right}#[bg=#{@dracula-light_purple},fg=#{@dracula-gray}] %Y-%m-%d %H:%M '
+set -g status-right '#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}#{user} #[fg=#{@dracula-light_purple},bg=#{@dracula-gray}]#{@powerline-right}#[bg=#{@dracula-light_purple},fg=#{@dracula-gray}] %Y-%m-%d'
 
 set-window-option -g window-status-current-format '#[bg=#{@dracula-pink},fg=#{@dracula-gray}]#{@powerline-left} #I #{@powerline-sep} #W #F #[bg=#{@dracula-gray},fg=#{@dracula-pink}]#{@powerline-left}'
 set-window-option -g window-status-format         '#[bg=#{@dracula-light_purple},fg=#{@dracula-gray}]#{@powerline-left} #I #{@powerline-sep} #W #F #[bg=#{@dracula-gray},fg=#{@dracula-light_purple}]#{@powerline-left}'
