feat(tmux): Set cursor style as blinking underline

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,6 +9,8 @@ set -g terminal-overrides "$TERM:Tc"
 set -g status-keys emacs
 set -g mode-keys   vi
 
+set -g cursor-style blinking-underline
+
 # Prevents <esc> in neovim to be delayed
 # https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
 set -sg escape-time 10
